# TerminalVisuals

./: .gitignore  README.md  justfile  pyproject.toml
src/: app.py  aurora.py  base.py  chars.py  config.py  dyson.py  ember.py  galaxy.py  main.py  minimalism.py  ripple.py  skyline.py  spiral.py  waves.py  zen.py
tests/: test_galaxy.py  test_skyline.py
