[project]
name = "terminalvisuals"
version = "0.1.0"
description = "Terminal visualizer with wave and galaxy animations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
freio = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
